--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -9,3 +9,19 @@
   title = {{Independent Signals Within the {MHC} are Associated with Systemic Lupus Erythematosus{\textemdash}A Family-based {SNP} Study}},
   journal = {Clinical Immunology},
 }
+
+
+@article{26501192,
+  title = {{Genome-wide identification of microRNAs regulating cholesterol and triglyceride homeostasis.}},
+  date = {2015 Nov},
+  source = {Nat Med},
+  authors = {Wagschal, A and Najafi-Shoushtari, SH and Wang, L and Goedeke, L and Sinha, S and deLemos, AS and Black, JC and Ramírez, CM and Li, Y and Tewhey, R and Hatoum, I and Shah, N and Lu, Y and Kristo, F and Psychogios, N and Vrbanac, V and Lu, YC and Hla, T and de, Cabo R and Tsang, JS and Schadt, E and Sabeti, PC and Kathiresan, S and Cohen, DE and Whetstine, J and Chung, RT and Fernández-Hernando, C and Kaplan, LM and Bernards, A and Gerszten, RE and Näär, AM},
+  author = {Wagschal, A and Najafi-Shoushtari, SH and Wang, L and Goedeke, L and Sinha, S and deLemos, AS and Black, JC and Ramírez, CM and Li, Y and Tewhey, R and Hatoum, I and Shah, N and Lu, Y and Kristo, F and Psychogios, N and Vrbanac, V and Lu, YC and Hla, T and de, Cabo R and Tsang, JS and Schadt, E and Sabeti, PC and Kathiresan, S and Cohen, DE and Whetstine, J and Chung, RT and Fernández-Hernando, C and Kaplan, LM and Bernards, A and Gerszten, RE and Näär, AM},
+  year = {2015},
+  month = {Nov},
+  journal = {Nat Med},
+  volume = {21},
+  number = {},
+  pages = {1290-7},
+  pubmed_id = {26501192},
+}
