--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -25,3 +25,19 @@
   pages = {1290-7},
   pubmed_id = {26501192},
 }
+
+
+@article{27019418,
+  title = {{Are Retail Outlets Complying with National Legislation to Protect Children from Exposure to Tobacco Displays at Point of Sale? Results from the First Compliance Study in the UK.}},
+  date = {2016},
+  source = {PLoS One},
+  authors = {Eadie, D and Stead, M and MacKintosh, AM and Murray, S and Best, C and Pearce, J and Tisch, C and van, der Sluijs W and Amos, A and MacGregor, A and Haw, S},
+  author = {Eadie, D and Stead, M and MacKintosh, AM and Murray, S and Best, C and Pearce, J and Tisch, C and van, der Sluijs W and Amos, A and MacGregor, A and Haw, S},
+  year = {2016},
+  month = {},
+  journal = {PLoS One},
+  volume = {11},
+  number = {},
+  pages = {e0152178},
+  pubmed_id = {27019418},
+}
