added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -57,3 +57,19 @@
   title = {{A Measure of Total Research Impact Independent of Time and Discipline}},
   journal = {{PLoS} {ONE}},
 }
+
+
+@article{26991501,
+  title = {{Transforming Clinical Data into Actionable Prognosis Models: Machine-Learning Framework and Field-Deployable App to Predict Outcome of Ebola Patients.}},
+  date = {2016 Mar},
+  source = {PLoS Negl Trop Dis},
+  authors = {Colubri, A and Silver, T and Fradet, T and Retzepi, K and Fry, B and Sabeti, P},
+  author = {Colubri, A and Silver, T and Fradet, T and Retzepi, K and Fry, B and Sabeti, P},
+  year = {2016},
+  month = {Mar},
+  journal = {PLoS Negl Trop Dis},
+  volume = {10},
+  number = {},
+  pages = {e0004549},
+  pubmed_id = {26991501},
+}
