--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -73,3 +73,18 @@
   pages = {e0004549},
   pubmed_id = {26991501},
 }
+
+
+@article{Bik_2009,
+  doi = {10.1111/j.1365-2699.2009.02219.x},
+  url = {http://dx.doi.org/10.1111/j.1365-2699.2009.02219.x},
+  year = {2009},
+  month = {aug},
+  publisher = {Wiley-Blackwell},
+  volume = {37},
+  number = {1},
+  pages = {1--2},
+  author = {Holly M. Bik},
+  title = {{Small worms big ideas: evolutionary inferences from nematode {DNA}}},
+  journal = {Journal of Biogeography},
+}
